tests/baselines/reference/undefinedTypeArgument2.errors.txt
==== tests/cases/compiler/undefinedTypeArgument2.ts (2 errors) ====
    // once caused stack overflow
    interface Query<T> {
        selectMany<U>(selector: (item: T) => U[]): Query<U>;
        selectMany<U>(arraySelector: (item: T) => U[], resultSelector: (outer: T, inner: U) => R): Query<R>;
                                                                                               ~
!!! error TS2095: Could not find symbol 'R'.
                                                                                                         ~
!!! error TS2095: Could not find symbol 'R'.
    }